# flashcards-api

./: .env  Cargo.toml  DEVLOG.md  README.md  docker-compose.yml
migrations/2025-03-05-221804_users/: up.sql
src/: main.rs
src/api/v1/: mod.rs
src/api/v1/api/: error_utils.rs  errors.rs  handlers.rs  mod.rs  models.rs  routers.rs  state.rs  wrappers.rs
src/api/v1/auth/: handlers.rs  mod.rs  routers.rs  utils.rs
src/api/v1/decks/: schema.rs
src/api/v1/infra/: database.rs  error_utils.rs  errors.rs  mod.rs
src/api/v1/user/: db_models.rs  handlers.rs  mod.rs  models.rs  repository.rs  routers.rs  schema.rs
