[package]
name = "flashcards-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {"version"="^0.8.0", features=["json", "macros"]}
chrono = "0.4.38"
diesel = {"version"="2.1.6", features=["postgres", "uuid"]}
deadpool-diesel = { version = "0.4", features = ["postgres"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = {"version" = "1.0.198", features=["derive"]}
tokio = {"version" = "1.37.0", features=["full"]}
tracing = {"version" = "0.1.40", features = ["log"]}
tracing-subscriber = "0.3.18"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }